--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # app:
   #   build:
   #     context: .
-  #     dockerfile: ./Dockerfile
+  #     dockerfile: app/Dockerfile
   #   container_name: profile-container
   #   command: python app/app.py
   #   ports:
@@ -21,18 +21,21 @@ services:
     container_name: auth
     build:
       context: .
-      dockerfile: ./Dockerfile
-      command: python app/app.py
-      env_file:
+      dockerfile: ./auth_micro/Dockerfile
+    command: uvicorn main2:app --reload --host 0.0.0.0 --port 8080
+    ports:
+      - "8080:8080"
+    env_file:
       - .env
-      volumes:
+    volumes:
         - ./app:/code/app
+      
     
 
-  redis_db:
-    image: redis:6.2.6-alpine
-    ports:
-      - 6379:6379
+  # redis_db:
+  #   image: redis:6.2.6-alpine
+  #   ports:
+  #     - 6379:6379
     
 
   mongodb:
